--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "assert": "^2.0.0",
+    "bcrypt": "^5.1.0",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3",
+    "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "session-file-store": "^1.5.0"
   }
 }
